--- a/skyfolk/templates/account/like_entries.html
+++ b/skyfolk/templates/account/like_entries.html
@@ -2,32 +2,7 @@
 {% load avatar_tags %}
 {% load static %}
 {% for item in object_list %}
-    <div class="col l3 m10 s12">
-        <div class="personal-card">
-            <div class="row">
-                <div class="col s12">
-                    <div class="header">
-                        {% if item.from_profile.back_image %}
-                            <img class="back-profile-user" src="{{ item.from_profile.back_image.url }}">
-                        {% else %}
-                            <img class="back-profile-user" src="{% static "img/nuevo_back.jpg" %}">
-                        {% endif %}
-                        <i class="material-icons like-him">favorite</i>
-                        <div class="bg-user">
-                            <div onclick="location.href='/profile/{{ item.from_profile.user.username }}'"
-                                 class="profile-user-bg">{% avatar item.from_profile.user %}</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col s12">
-                    <div class="name-friend">
-                        <a href="/profile/{{ item.from_profile.user.username }}">@{{ item.from_profile.user.username }} </a><br><br>
-                        <p>{{ item.from_profile.user.first_name }} {{ item.from_profile.user.last_name }}</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+    <div class="col l3 s12 z-depth-1-half" style="border-radius: 7px; margin: 10px;">
+        {% include "user_profile/skyfolk-card.html" %}
     </div>
 {% endfor %}
