--- a/skyfolk/templates/groups/followers_page.html
+++ b/skyfolk/templates/groups/followers_page.html
@@ -1,71 +1,17 @@
 {% load app_filters %}
 {% load avatar_tags %}
 {% load static %}
-{% if enable_kick_btn %}
-{% for item in user_list %}
-<div id="member-{{item.id}}" class="col l3 m10 s12 offset-m1">
-        <div class="personal-card">
-            <div class="row">
-                <div class="col s12">
-                    <div class="header">
-                        {% if item.profile.back_image %}
-                            <img class="back-profile-user" src="{{ item.profile.back_image.url }}">
-                        {% else %}
-                            <img class="back-profile-user" src="{% static "img/nuevo_back.jpg" %}">
-                        {% endif %}
-                        <i class="material-icons like-him">person</i>
-                        <div class="bg-user">
-                            <div onclick="location.href='/profile/{{ item.username }}'"
-                                 class="profile-user-bg">{% avatar item.username %}</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col s12">
-                    <div class="name-friend">
-                        <a href="/profile/{{ item.username }}">@{{ item.username }}</a><br><br>
-                        <p>{{ item.first_name }} {{ item.last_name }}</p>
-                    </div>
-                </div>
-            </div>
+{% for item in object_list %}
+    <div id="member-{{ item.profile.user.id }}" class="col l3 s12 z-depth-1-half"
+         style="border-radius: 7px; margin: 10px;">
+        {% include "user_profile/skyfolk-card.html" %}
+        {% if enable_kick_btn %}
             <div class="row center">
                 <div class="col s12">
-                    <button data-id="{{ item.id }}" class="kick-member waves-effect waves-light btn red">Expulsar</button> 
+                    <button data-id="{{ item.id }}" class="kick-member waves-effect waves-light btn red">Expulsar
+                    </button>
                 </div>
             </div>
-        </div>
+        {% endif %}
     </div>
 {% endfor %}
-{% else %}
-{% for item in user_list %}
-    <div class="col l3 m10 s12 offset-m1">
-        <div class="personal-card">
-            <div class="row">
-                <div class="col s12">
-                    <div class="header">
-                        {% if item.profile.back_image %}
-                            <img class="back-profile-user" src="{{ item.profile.back_image.url }}">
-                        {% else %}
-                            <img class="back-profile-user" src="{% static "img/nuevo_back.jpg" %}">
-                        {% endif %}
-                        <i class="material-icons like-him">person</i>
-                        <div class="bg-user">
-                            <div onclick="location.href='/profile/{{ item.username }}'"
-                                 class="profile-user-bg">{% avatar item.username %}</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col s12">
-                    <div class="name-friend">
-                        <a href="/profile/{{ item.username }}">@{{ item.username }}</a><br><br>
-                        <p>{{ item.first_name }} {{ item.last_name }}</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-{% endfor %}
-{% endif %}
