--- a/skyfolk/templates/groups/item_group.html
+++ b/skyfolk/templates/groups/item_group.html
@@ -10,8 +10,8 @@
                     {% else %}
                     <img class="back-profile-user" src="{% static "img/nuevo_back.jpg" %}">
                     {% endif %}
-                    <i class="material-icons md-24 group-icon"
-                        title="{{ group.users.all|length }}">group</i>
+                    <div class="group-icon">{{ group.users.all|length }}<i class="material-icons md-24"
+                        title="{{ group.users.all|length }}">group</i></div>
                     <div class="bg-user">
                         <div onclick="location.href='/group/{{ group.slug }}'"
                             class="profile-user-bg">
@@ -43,9 +43,7 @@
             <div class="row">
                 <div class="col s12 group-data">
                     {% for tag in group.tags.most_common|slice:":5" %}
-                    <span class="chip">
-                        {{ tag.name|truncatechars:9 }}
-                    </span>
+                        <a class="blue-text" href="{% url "user_profile:category-search" option="all" %}?q={{ tag.name }}"><b>#{{ tag.name }}</b></a>
                     {% endfor %}
                 </div>
             </div>
