--- a/skyfolk/templates/groups/user_list_page.html
+++ b/skyfolk/templates/groups/user_list_page.html
@@ -1,35 +1,8 @@
 {% load app_filters %}
 {% load avatar_tags %}
 {% load static %}
-{% for item in like_list %}
-    
-    <div class="col l3 m10 s12 offset-m1">
-        <div class="personal-card">
-            <div class="row">
-                <div class="col s12">
-                    <div class="header">
-                        {% if item.from_like.profile.back_image %}
-                            <img class="back-profile-user"
-                                 src="{{ item.from_like.profile.back_image.url }}">
-                        {% else %}
-                            <img class="back-profile-user" src="{% static "img/nuevo_back.jpg" %}">
-                        {% endif %}
-                        <i class="material-icons like-him">favorite</i>
-                        <div class="bg-user">
-                            <div onclick="location.href='/profile/{{ item.from_like.username}}'"
-                                 class="profile-user-bg">{% avatar item.from_like.username %}</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col s12">
-                    <div class="name-friend">
-                        <a href="/profile/{{ item.from_like.username }}">@{{ item.from_like.username }}</a><br><br>
-                        <p>{{ item.from_like.first_name }} {{ item.from_like.last_name }}</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+{% for item in object_list %}
+    <div class="col l3 s12 z-depth-1-half" style="border-radius: 7px; margin: 10px;">
+        {% include "user_profile/skyfolk-card.html" %}
     </div>
 {% endfor %}
