--- a/dash/contrib/plugins/twitch/templates/twitch/render.html
+++ b/dash/contrib/plugins/twitch/templates/twitch/render.html
@@ -4,8 +4,8 @@
             <div class="widget-wr">
                 <div class="row widget-title blue white-text">
                         <div class="col s12">
-                    <h4 class="flow-text">Twitch de {{ plugin.data.channel }} // <a class="white-text"
-                                                                                    href="{% url "user_profile:profile" plugin.user %}">@{{ plugin.user }}</a>
+                    <h4 class="flow-text">Twitch de {{ plugin.data.channel }} 
+                    {% if not is_profile %} // <a class="white-text" href="{% url "user_profile:profile" plugin.user %}">@{{ plugin.user }}</a>{% endif %}
                     </h4>
                     </div>
                 </div>
