--- a/dash/templates/dash/layouts/base_placeholder_edit.html
+++ b/dash/templates/dash/layouts/base_placeholder_edit.html
@@ -30,9 +30,7 @@
             {% endcomment %}
         </div>
         <div class="plugin-content-wrapper">
-            {% with plugin.render as rendered %}
-                {% if rendered %}{{ rendered }}{% endif %}
-            {% endwith %}
+            {% render_plugin_view plugin %}
         </div>
     </div>
 {% endfor %}
