--- a/skyfolk/static/sass/core.sass
+++ b/skyfolk/static/sass/core.sass
@@ -557,3 +557,10 @@ ul#vertical-menu .userView .background
   overflow: hidden
   cursor: pointer
   opacity: 0.8
+
+.plugin img
+  display: block
+  max-width: 500px !important
+  max-height: 500px !important
+  width: auto !important
+  height: auto !important
