--- a/skyfolk/templates/groups/followers.html
+++ b/skyfolk/templates/groups/followers.html
@@ -7,18 +7,36 @@
 {% block extra-css %}
     <link type="text/css" rel="stylesheet" href="{% static "css/amigos.css" %}" onload="if(media!='all')media='all'">
     <style>
-        .user-card  {
-            height: 300px;
+        .grid {
+            margin: 0 auto;
         }
-        .user-avatar {
-            height: 80% !important;
+
+        .grid-item {
+            width: 400px;
+            margin-bottom: 10px;
+            float: left;
+            background-color: #fff;
+        }
+
+        .photo-date {
+            display: initial;
+        }
+
+        .grid-item .img {
+            border-radius: 3px;
+            box-shadow: 0 1px 5px #1e88e5;
+        }
+
+        .grid-item .img > img {
+            width: 100%;
+            height: 100%;
         }
     </style>
 {% endblock %}
 {% block content %}
     <div class="container">
         <input id="group_id" type="hidden" value="{{ group.id }}"/>
-        <div class="row">
+        <div class="grid row">
             <div class="col l12 m10 s12 container-responsive">
                 <div class="row">
                     {% include "groups/followers_page.html" %}
@@ -55,4 +73,34 @@
         </div>
         <script type="text/javascript" src="{% static "js/groups.js" %}"></script>
     </div>
+    <script>
+
+        $(window).on('load', function () {
+            var $grid = $('.grid').imagesLoaded(function () {
+                $grid.masonry({
+                    itemSelector: '.grid-item',
+                    columnWidth: 400,
+                    gutter: 20,
+                    fitWidth: true,
+                    horizontalOrder: true,
+                    transitionDuration: '0.3s'
+                });
+            });
+
+            var infinite = new Waypoint.Infinite({
+                element: $('.grid'),
+                offset: 'bottom-in-view',
+                onBeforePageLoad: function () {
+                    $('.loading_search').show();
+                },
+                onAfterPageLoad: function () {
+                    $('.loading_search').hide();
+                    $grid.imagesLoaded().progress(function () {
+                        $grid.masonry('reloadItems');
+                        $grid.masonry('layout');
+                    });
+                }
+            });
+        });
+    </script>
 {% endblock %}
