--- a/skyfolk/templates/account/relations_page.html
+++ b/skyfolk/templates/account/relations_page.html
@@ -2,7 +2,7 @@
 {% load avatar_tags %}
 {% load static %}
 {% for item in object_list %}
-    <div class="col l3 s12 z-depth-1-half" style="border-radius: 7px; margin: 10px;">
+    <div class="grid-item" style="border-radius: 7px; margin: 10px;">
         {% include "user_profile/skyfolk-card.html" %}
     </div>
 {% endfor %}
