--- a/skyfolk/templates/account/base_news.html
+++ b/skyfolk/templates/account/base_news.html
@@ -18,8 +18,8 @@
 
         .grid-item {
             width: 400px;
-            margin-bottom: 10px;
-            float: left;
+            background-color: #fff;
+            margin: 10px;
         }
 
         .card .card-title {
@@ -291,11 +291,8 @@
             var $grid = $('.grid').imagesLoaded(function () {
                 $grid.masonry({
                     itemSelector: '.grid-item',
-                    columnWidth: 400,
-                    gutter: 20,
                     fitWidth: true,
                     horizontalOrder: true,
-                    transitionDuration: '0.3s'
                 });
             });
 
