--- a/skyfolk/templates/groups/user_likes.html
+++ b/skyfolk/templates/groups/user_likes.html
@@ -13,9 +13,8 @@ Template para los seguidores de un perfil
 
         .grid-item {
             width: 400px;
-            margin-bottom: 10px;
-            float: left;
             background-color: #fff;
+            box-shadow: 5px 5px 5px #f0f0f0;
         }
 
         .photo-date {
@@ -78,11 +77,8 @@ Template para los seguidores de un perfil
             var $grid = $('.grid').imagesLoaded(function () {
                 $grid.masonry({
                     itemSelector: '.grid-item',
-                    columnWidth: 400,
-                    gutter: 20,
                     fitWidth: true,
                     horizontalOrder: true,
-                    transitionDuration: '0.3s'
                 });
             });
 
