--- a/skyfolk/templates/search/search.html
+++ b/skyfolk/templates/search/search.html
@@ -18,9 +18,8 @@ Template para las busquedas
 
         .grid-item {
             width: 400px;
-            margin-bottom: 10px;
-            float: left;
             background-color: #fff;
+            margin: 10px;
         }
 
         .photo-date {
@@ -482,11 +481,8 @@ Template para las busquedas
             var $grid = $('.grid').imagesLoaded(function () {
                 $grid.masonry({
                     itemSelector: '.grid-item',
-                    columnWidth: 400,
-                    gutter: 20,
                     fitWidth: true,
                     horizontalOrder: true,
-                    transitionDuration: '0.3s'
                 });
             });
 
