--- a/user_profile/templates/user_profile/user_content.html
+++ b/user_profile/templates/user_profile/user_content.html
@@ -17,8 +17,9 @@
 
         .grid-item {
             width: 400px;
-            margin-bottom: 10px;
-            float: left;
+            background-color: #fff;
+            box-shadow: 5px 5px 5px #f0f0f0;
+            margin: 10px;
         }
 
         .photo-date {
@@ -197,12 +198,8 @@
 
         var $grid = $('.grid').masonry({
             itemSelector: '.grid-item',
-            columnWidth: 400,
-            gutter: 20,
-            fitWidth: true,
-            initLayout: false,
-            horizontalOrder: true,
-            transitionDuration: '0.3s'
+                    fitWidth: true,
+                    horizontalOrder: true,
         });
 
         $grid.imagesLoaded().progress(function () {
