--- a/skyfolk/static/sass/core.sass
+++ b/skyfolk/static/sass/core.sass
@@ -559,8 +559,4 @@ ul#vertical-menu .userView .background
   opacity: 0.8
 
 .plugin img
-  display: block
-  max-width: 500px !important
-  max-height: 500px !important
-  width: auto !important
-  height: auto !important
+  width: 100%
