--- a/skyfolk/templates/account/base.html
+++ b/skyfolk/templates/account/base.html
@@ -3,7 +3,6 @@
 
 <!DOCTYPE html>
 <html>
-<!-- codigo del modulo allauth -->
 <head>
     <title>Skyfolk // {% block head_title %}{% endblock %}</title>
     
@@ -25,7 +24,7 @@
     <link rel="icon" type="image/png" href="{% static "img/favicon-32x32.png" %}" sizes="32x32" />
     <link rel="icon" type="image/png" href="{% static "img/favicon-16x16.png" %}" sizes="16x16" />
     <link rel="icon" type="image/png" href="{% static "img/favicon-128.png" %}" sizes="128x128" />
-    <meta name="application-name" content="&nbsp;"/>
+    <meta name="application-name" content="Skyfolk"/>
     <meta name="msapplication-TileColor" content="#FFFFFF" />
     <meta name="msapplication-TileImage" content="{% static "img/mstile-144x144.png" %}" />
     <meta name="msapplication-square70x70logo" content="{% static "img/mstile-70x70.png" %}" />
