--- a/photologue/templates/photologue/videos/publication_detail.html
+++ b/photologue/templates/photologue/videos/publication_detail.html
@@ -4,6 +4,7 @@
 {% load app_filters %}
 {% load humanize %}
 {% load mptt_tags %}
+{% load decorators %}
 {% load embed_video_tags %}
 {% load emoji_tags %}
 {% load group_utils %}
@@ -137,7 +138,7 @@
                                                               placeholder="Escribe el contenido del nuevo mensaje"
                                                               id="id_caption-{{ node.pk }}" cols="40" maxlength="500"
                                                               name="content" rows="10" required="required"
-                                                              style="height: 10.9969px;">{{ node.content }}</textarea>
+                                                              style="height: 10.9969px;">{{ node.content|inner_text_between_html_tags }}</textarea>
                                                     <label for="id_caption-{{ node.pk }}">Editar comentario</label>
                                                 </div>
                                                 <div class="row">
