--- a/photologue_groups/templates/photologue_groups/videos/ajax_load_replies.html
+++ b/photologue_groups/templates/photologue_groups/videos/ajax_load_replies.html
@@ -7,6 +7,7 @@
 {% load group_utils %}
 {% load emoji_tags %}
 {% load static %}
+{% load decorators %}
 <input type="hidden" value="{{ publications|length }}" class="childs_for_{{ pub_id }}">
 {% if publications.has_next %}
     <input type="hidden" value="{{ publications.next_page_number }}" class="page_for_{{ pub_id }}">
@@ -118,7 +119,7 @@
                         placeholder="Escribe el contenido del nuevo mensaje"
                         id="id_caption-{{ node.pk }}" cols="40" maxlength="500"
                         name="content" rows="10" required="required"
-                        style="height: 10.9969px;">{{ node.content }}</textarea>
+                        style="height: 10.9969px;">{{ node.content|inner_text_between_html_tags }}</textarea>
                         <label for="id_caption-{{ node.pk }}">Editar comentario</label>
                     </div>
                     <div class="row">
