--- a/skyfolk/templates/account/ajax_load_replies.html
+++ b/skyfolk/templates/account/ajax_load_replies.html
@@ -125,7 +125,7 @@
                                                       placeholder="Escribe el contenido del nuevo mensaje"
                                                       id="id_caption-{{ node.pk }}" cols="40" maxlength="500"
                                                       name="content" rows="10" required="required"
-                                                      style="height: 11px;">{{ node.content }}</textarea>
+                                                      style="height: 11px;">{{ node.content|inner_text_between_html_tags }}</textarea>
                                             <label for="id_caption-{{ node.pk }}">Editar comentario</label>
                                         </div>
                                         <div class="row">
