--- a/skyfolk/templates/channels/new_group_publication.html
+++ b/skyfolk/templates/channels/new_group_publication.html
@@ -4,6 +4,8 @@
 {% load app_filters %}
 {% load emoji_tags %}
 {% load static %}
+{% load decorators %}
+
 <div class="row infinite-item" id="pub-{{ node.pk }}" data-id="{{ group_profile.pk }}">
         <div class="wrapper">
             <div class="box">
@@ -115,7 +117,7 @@
                                                           placeholder="Escribe el contenido del nuevo mensaje"
                                                           id="id_caption-{{ node.pk }}" cols="40" maxlength="500"
                                                           name="content" rows="10" required="required"
-                                                          style="height: 11px;">{{ node.content }}</textarea>
+                                                          style="height: 11px;">{{ node.content|inner_text_between_html_tags }}</textarea>
                                                 <label for="id_caption-{{ node.pk }}">Editar comentario</label>
                                             </div>
                                             <div class="row">
