--- a/photologue/templates/photologue/videos/ajax_load_replies.html
+++ b/photologue/templates/photologue/videos/ajax_load_replies.html
@@ -3,6 +3,7 @@
 {% load humanize %}
 {% load avatar_tags %}
 {% load mptt_tags %}
+{% load decorators %}
 {% load embed_video_tags %}
 {% load emoji_tags %}
 {% load group_utils %}
@@ -118,7 +119,7 @@
                         placeholder="Escribe el contenido del nuevo mensaje"
                         id="id_caption-{{ node.pk }}" cols="40" maxlength="500"
                         name="content" rows="10" required="required"
-                        style="height: 10.9969px;">{{ node.content }}</textarea>
+                        style="height: 10.9969px;">{{ node.content|inner_text_between_html_tags }}</textarea>
                         <label for="id_caption-{{ node.pk }}">Editar comentario</label>
                     </div>
                     <div class="row">
