--- a/photologue/templates/photologue/videos/publications_entries.html
+++ b/photologue/templates/photologue/videos/publications_entries.html
@@ -7,6 +7,7 @@
 {% load group_utils %}
 {% load emoji_tags %}
 {% load static %}
+{% load decorators %}
 {% for node in publications %}
 <div class="row infinite-item">
         <div class="wrapper" id="pub-{{ node.pk }}" data-id="{{ user.pk }}">
@@ -115,7 +116,7 @@
                         placeholder="Escribe el contenido del nuevo mensaje"
                         id="id_caption-{{ node.pk }}" cols="40" maxlength="500"
                         name="content" rows="10" required="required"
-                        style="height: 10.9969px;">{{ node.content }}</textarea>
+                        style="height: 10.9969px;">{{ node.content|inner_text_between_html_tags }}</textarea>
                         <label for="id_caption-{{ node.pk }}">Editar comentario</label>
                     </div>
                     <div class="row">
