--- a/photologue_groups/templates/photologue_groups/videos/publication_detail.html
+++ b/photologue_groups/templates/photologue_groups/videos/publication_detail.html
@@ -6,6 +6,7 @@
 {% load emoji_tags %}
 {% load mptt_tags %}
 {% load embed_video_tags %}
+{% load decorators %}
 {% load group_utils %}
 {% load static %}
 {% block extra-css %}
@@ -169,7 +170,7 @@
                                                               placeholder="Escribe el contenido del nuevo mensaje"
                                                               id="id_caption-{{ node.pk }}" cols="40" maxlength="500"
                                                               name="content" rows="10" required="required"
-                                                              style="height: 10.9969px;">{{ node.content }}</textarea>
+                                                              style="height: 10.9969px;">{{ node.content|inner_text_between_html_tags }}</textarea>
                                                     <label for="id_caption-{{ node.pk }}">Editar comentario</label>
                                                 </div>
                                                 <div class="row">
