--- a/skyfolk/templates/channels/new_group_gallery_publication.html
+++ b/skyfolk/templates/channels/new_group_gallery_publication.html
@@ -1,5 +1,6 @@
 {% load photo_publications_tags %}
 {% load app_filters %}
+{% load decorators %}
 {% load humanize %}
 {% load avatar_tags %}
 {% load mptt_tags %}
@@ -114,7 +115,7 @@
                         placeholder="Escribe el contenido del nuevo mensaje"
                         id="id_caption-{{ node.pk }}" cols="40" maxlength="500"
                         name="content" rows="10" required="required"
-                        style="height: 10.9969px;">{{ node.content }}</textarea>
+                        style="height: 10.9969px;">{{ node.content|inner_text_between_html_tags }}</textarea>
                         <label for="id_caption-{{ node.pk }}">Editar comentario</label>
                     </div>
                     <div class="row">
