--- a/skyfolk/templates/groups/publication_detail.html
+++ b/skyfolk/templates/groups/publication_detail.html
@@ -8,6 +8,7 @@
 {% load group_utils %}
 {% load emoji_tags %}
 {% load static %}
+{% load decorators %}
 {% block extra-css %}
     <link rel="stylesheet" type="text/css" href="{% static "css/comentarios.css" %}">
     <link rel="stylesheet" type="text/css" href="{% static "css/publication_detail.css" %}">
@@ -171,7 +172,7 @@
                                                           placeholder="Escribe el contenido del nuevo mensaje"
                                                           id="id_caption-{{ node.pk }}" cols="40" maxlength="500"
                                                           name="content" rows="10" required="required"
-                                                          style="height: 11px;">{{ node.content }}</textarea>
+                                                          style="height: 11px;">{{ node.content|inner_text_between_html_tags }}</textarea>
                                                 <label for="id_caption-{{ node.pk }}">Editar comentario</label>
                                             </div>
                                             <div class="row">
