--- a/dash/contrib/plugins/service/templates/service/twitter/service_result.html
+++ b/dash/contrib/plugins/service/templates/service/twitter/service_result.html
@@ -26,7 +26,7 @@
                                 {% endif %}
                             {% endfor %}
                             <div class="row right">
-                                <a class="btn btn-info white-text blue" href="https://twitter.com/statuses/{{ result.twitterId }}">Ver
+                                <a class="btn btn-info white-text blue" href="https://twitter.com/{{ result.userAccount }}/status/{{ result.twitterId }}">Ver
                                     tweet</a>
                             </div>
                         </div>
