--- a/skyfolk/templates/emails/base_email.html
+++ b/skyfolk/templates/emails/base_email.html
@@ -104,7 +104,7 @@
                                 <table border="0" cellpadding="0" cellspacing="0" style="border-collapse: separate; mso-table-lspace: 0pt; mso-table-rspace: 0pt; width: auto;">
                                   <tbody>
                                     <tr>
-                                      <td style="font-family: sans-serif; font-size: 14px; vertical-align: top; background-color: #2196F3; border-radius: 5px; text-align: center;"> <a href="http://skyfolk.net" target="_blank" style="display: inline-block; color: #ffffff; background-color: #2196F3; border: solid 1px #2196F3; border-radius: 5px; box-sizing: border-box; cursor: pointer; text-decoration: none; font-size: 14px; font-weight: bold; margin: 0; padding: 12px 25px; border-color: #2196F3;">Ir a Skyfolk</a> </td>
+                                      <td style="font-family: sans-serif; font-size: 14px; vertical-align: top; background-color: #2196F3; border-radius: 5px; text-align: center;"> <a href="{% block btn_url %}http://skyfolk.net{% endblock %}" target="_blank" style="display: inline-block; color: #ffffff; background-color: #2196F3; border: solid 1px #2196F3; border-radius: 5px; box-sizing: border-box; cursor: pointer; text-decoration: none; font-size: 14px; font-weight: bold; margin: 0; padding: 12px 25px; border-color: #2196F3;">{% block btn_text %}Ir a Skyfolk{% endblock %}</a> </td>
                                     </tr>
                                   </tbody>
                                 </table>
